# petutils

./: pyproject.toml
.github/workflows/: run_pytest.yaml
data/: participants.tsv
data/sub-01/ses-multirun/pet/: sub-01_ses-multirun_run-02_pet.json
petutils/: __init__.py  file_manipulations.py  nifti_fixer.py  petutils.py
tests/: conftest.py  test_file_manipulations.py  test_pet_utils.py
