[project]
name = "petutils"
version = "0.2.0"
description = ""
authors = [
    {name = "XXXX", email = "28850131+bendhouseart@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pybids>=0.16.3",
    "nipype>=1.8.6",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.16.1",
    "pytest>=7.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
]
