[project]
name = "petutils"
version = "0.0.2"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Anthony Galassi", email = "28850131+bendhouseart@users.noreply.github.com" }
]
dependencies = [
    "pybids>=0.16.3",
    "nipype>=1.8.6",
    "nilearn>=0.12.1",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.16.1",
    "pytest>=7.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["petutils"]

[project.scripts]
concat-niftis = "petutils.file_manipulations:concat_niftis_cli"
niftifixer = "petutils.nifti_fixer:cli"
